--- a/components/aboutPage/history/pages/Page2023.module.css
+++ b/components/aboutPage/history/pages/Page2023.module.css
@@ -1,5 +1,5 @@
 .page {
-    background-image: url("../images/1995.svg");
+    background-image: url("../images/2023.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
